src/test/resources/parser/invalid/noKeywordID.sbsc
// Parser should fail when keyword is used as ID

num = 4;